update: Java11 [deprecation] Class  newInstance() Obsolete